--- a/index.html
+++ b/index.html
@@ -3,9 +3,49 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/estilos_index.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="icon" href="imagenes/logo.ico">
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <div class="encabezado">
+            <img src="imagenes/logo_aerolinea.PNG" alt="titulo">
+            <a href=""><h2>INICIAR SESION</h2></a>
+            <a href=""><h2>INGRESAR</h2></a>
+        </div>
+<hr>
+        <div class="encabezado2">
+            <nav>
+                <ul>
+                    <li><a href=""><p>INICIO</p></a></li>
+                    <li><a href=""><p>VUELOS</p></a></li>
+                    <li><a href=""><p>TIQUETES</p></a></li>
+                    <li><a href=""><p>MIS VIAJES</p></a></li>
+                    <li><a href=""><p>PRECIOS</p></a></li>
+                    <li><a href=""><p>ACTIVIDADES</p></a></li>
+                    <li><a href=""><p>ALOJAMIENTO</p></a></li>
+                    <li><a href=""><p>QUIENES SOMOS</p></a></li>
+                    <li><a href=""><p>SERVICIOS</p></a></li>
+                </ul>
+            </nav>
+        </div>
+        <div class="triangulo">
+            <img src="imagenes/sinfondo.png" alt="">
+        </div>
+    </header>
+<hr>
+    <h2>BIENVENIDOS A NUESTRA AEROLINEA</h2>
+    <div></div>
+    <div></div>
+    <div></div>
+    <div></div>
+
+    <footer>
+        <img src="" alt="logo">
+        <p> &copy; aerolinea-adsi</p>
+    </footer>
 </body>
 </html>
