redireccione las imagenes con la nueva carpeta

--- a/admin.html
+++ b/admin.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <img src="img/Logo-Adidas.jpg" alt="loguito" width="80px" height="60px">  
+            <img src="imagenes/Logo-Adidas.jpg" alt="loguito" width="80px" height="60px">  
             <div class="titulo">
                 <h3>AEROLINEA</h3>
             </div>    
@@ -32,7 +32,7 @@
         </div>
         <hr class="linea">
         <div class="slider">
-            <img class="imagen-slider" src="img/aviones.jpg" alt="">
+            <img class="imagen-slider" src="imagenes/aviones.jpg" alt="">
         </div>
     </div>
 </body>
