mas arreglos en el index

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <header>
         <div class="encabezado">
             <img src="imagenes/logo_aerolinea.PNG" alt="titulo">
-            <a href=""><h2>INICIAR SESION</h2></a>
+            <a href=""><h2 class="iniciar">INICIAR SESION</h2><hr class="linea_iniciar"></a>
+            
             <a href=""><h2>INGRESAR</h2></a>
         </div>
 <hr>
@@ -36,6 +37,7 @@
         </div>
     </header>
 <hr>
+    <img class="logo_dos" src="imagenes/sinfondo.png" alt="">
     <img class="logo" src="imagenes/sinfondo.png" alt="">
     <h2 class="titulo_bienvenida">BIENVENIDOS A NUESTRA AEROLINEA</h2>
     
