--- a/Html/iniciosesion.html
+++ b/Html/iniciosesion.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="../css/estilos.css">
     <title>Inicio</title>
 </head>
 <body>
     <div class="container">
         <div class="formu">
-            <form action="php/inicio.php" method="POST" id="form">
+            <form action="../php/inicio.php" method="POST" id="form">
                 <label for="user">Usuario</label>
                 <input type="text" id="usu" name="usu" placeholder="Ingrese su usuario" required autocomplete="off">
                 <label for="password">Password</label>
