--- a/Html/registro.html
+++ b/Html/registro.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilosreg.css">
+    <link rel="stylesheet" href="../css/estilosreg.css">
     <title>Registro</title>
 </head>
 <body>
     <div class="container">
         <div class="formu">
-            <form action="php/registro.php" method="POST" id="form">
+            <form action="../php/registro.php" method="POST" id="form">
                 <label for="user">Documento</label>
                 <input type="text" id="usu" name="doc" placeholder="Ingrese su usuario o Documento" required autocomplete="off">
                 <label for="nombre">Nombre completo</label>
