modificando interfaz de admin

--- a/admin.html
+++ b/admin.html
@@ -14,7 +14,7 @@
                 <h3>AEROLINEA</h3>
             </div>    
                 <ul class="header-autogestion">
-                    <button class="btn_header">Mis viajes</button>
+                    <button class="btn_header">Viajes</button>
                     <button class="btn_header">Ayuda</button>
                     <button class="btn_header">Cerrar Sesion</button>
                 </ul>
@@ -33,6 +33,10 @@
         <hr class="linea">
         <div class="slider">
             <img class="imagen-slider" src="imagenes/aviones.jpg" alt="">
+        </div>
+        <hr>
+        <div class="modulos">
+            <button class="btn_modulo1">Viajes</button>
         </div>
     </div>
 </body>
