--- a/index.html
+++ b/index.html
@@ -51,6 +51,91 @@
     <br>
     <hr>
     <br>
+    <h2 class="titulo_bienvenida">VUELOS</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">TIQUETES</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">MIS VIAJES</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">PRECIOS</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">ACTIVIDADES</h2>
+    <br>
+    <div class="contenedor_todo_actividades">
+        <div>p</div>
+        <div>p</div>
+        <div>p</div>
+        <div>p</div>
+    </div>
+    <div class="contenedor_todo_actividades">
+        <div>p</div>
+        <div>p</div>
+        <div>p</div>
+        <div>p</div>
+    </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">ALOJAMIENTO</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">QUIENES SOMOS</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">SERVICIOS</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <div>
     <div>
         <div class="facebook"><i class="facebooki fab fa-facebook-f"></i><p>Facebook</p></div>
         <div class="instagram"><i class="instagrami fab fa-instagram"></i><p>Instagram</p></div>
