seccion del index actividades

--- a/index.html
+++ b/index.html
@@ -88,23 +88,21 @@
     <hr>
     <br>
     <h2 class="titulo_bienvenida">ACTIVIDADES</h2>
-    <br>
+    
     <div class="contenedor_todo_actividades">
-        <div>p</div>
-        <div>p</div>
-        <div>p</div>
-        <div>p</div>
+        <div class="actividades"><img src="imagenes/actividad1.jpg" alt=""><h4>Islas Maldivas</h4><p>Un archipiélago remoto del Atlántico Sur.</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad2.jpg" alt=""><h4>Paris</h4><p>La capital de Francia, es una importante ciudad europea</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad3.jpg" alt=""><h4>Grecia</h4><p>Un país del sureste de Europa con miles de islas</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad4.jpg" alt=""><h4>Alemania</h4><p>Un país de Europa occidental con un paisaje de bosques.</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad9.jpg" alt=""><h4>San Andres</h4><p>Una isla colombiana del mar Caribe</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
     </div>
     <div class="contenedor_todo_actividades">
-        <div>p</div>
-        <div>p</div>
-        <div>p</div>
-        <div>p</div>
+        <div  class="actividades"><img src="imagenes/actividad5.jpg" alt=""><h4>Belgica-Tomorrowland</h4><p>Un país de Europa Occidental conocido por ciudades medievales</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad6.jpg" alt=""><h4>EEUU - Disney</h4><p>Un país de 50 estados que ocupa una extensa franja</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad7.jpg" alt=""><h4>Canada</h4><p>Un país soberano en América del Norte</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad8.jpg" alt=""><h4>Japon</h4><p>Una nación insular del océano Pacífico con densas ciudades</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
+        <div  class="actividades"><img src="imagenes/actividad10.jpg" alt=""><h4>Holanda</h4><p>Un país de Europa conocido por su paisaje plano de canales</p><br><hr><div class="precio_actividad"><h5>$5566</h5></div></div>
     </div>
-    <br>
-    <br>
-    <br>
-    <br>
     <br>
     <hr>
     <br>
