agregue botones y barra de redes sociales en interfaz de admin

--- a/admi/admin.html
+++ b/admi/admin.html
@@ -26,7 +26,7 @@
                 <button class="btn_menu">Traslados</button>
                 <button class="btn_menu">Editar</button>
                 <div class="admin">
-                    <h4>ADMINISTRADOR: EVER MORENO</h4>
+                    <h4>ADMINISTRADOR: ANDRES MORENO</h4>
                 </div>
             </div>      
         </div>
