--- a/admi/admin.html
+++ b/admi/admin.html
@@ -55,6 +55,33 @@
             <h2 class="titulo-footer">AEROLINEA ADSI © 2020</h2>
         </div>
     </div>
+    <!---Portafolio de imagenes--->
+    <section class="portafolio" id="portafolio">
+        <h2 class="port-tit" id="port-tit">Viajes Mas Populares</h2>
+        <div class="port-cont" id="port-cont">
+            <section class="port-item">
+                <img src="../imagenes/actividad5.jpg" alt="" height="380px" class="port1" id="port1">
+                <article class="port-text" id="port-text">
+                    <h2 class="text" id="text">Mensajeria Express</h2>
+                    <p class="text1" id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed error</p>
+                </article>
+            </section>
+            <section class="port-item">
+                <img src="../imagenes/actividad8.jpg" alt="" height="380px" class="port2" id="port2">
+                <article class="port-text" id="port-text">
+                    <h2 class="text" id="text">Actualiad En La Mensajeria</h2>
+                    <p class="text1" id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed er</p>
+                </article>
+            </section>
+            <section class="port-item">
+                <img src="../imagenes/actividad6.jpg" alt="" height="380px" class="port3" id="port3">
+                <article class="port-text" id="port-text">
+                    <h2 class="text" id="text">Mercancia Rapida</h2>
+                    <p class="text1" id="text1">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed error</p>
+                </article>
+            </section>
+        </div>
+    </section>
 </body>
 <script src="https://kit.fontawesome.com/2c36e9b7b1.js" crossorigin="anonymous"></script>
 </html>
