--- a/Html/iniciosesion.html
+++ b/Html/iniciosesion.html
@@ -12,9 +12,9 @@
         <div class="formu">
             <form action="../php/inicio.php" method="POST" id="form">
                 <h1>INICIO DE SESION</h1>
-                <label for="user"><i>Usuario</i></label>
+                <label for="user">Usuario</label>
                 <input type="text" id="usu" name="usu" placeholder="Ingrese su usuario" required autocomplete="off">
-                <label for="password"><i>Password</i></label>
+                <label for="password">Password</label>
                 <input type="password" id="contra" name="contra" placeholder="Ingrese su contraseña" required autocomplete="off">
                 <input type="submit" name="enviar" id="env" value="Ingresar">
                 <div class="opc">
