tabla vuelos en admi (solo interfaz)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="encabezado">
             <img src="imagenes/logo_aerolinea.PNG" alt="titulo">
             <a href="Html/iniciosesion.html"><h2 class="iniciar">INICIAR SESION</h2><hr class="linea_iniciar"></a>
-            <a href=""><h2>REGISTRARSE</h2></a>
+            <a href=""><h2 class="registrarse">REGISTRARSE</h2></a>
         </div>
 <hr>
         <div class="encabezado2">
@@ -26,9 +26,9 @@
                     <li><a href=""><p>MIS VIAJES</p></a></li>
                     <li><a href=""><p>PRECIOS</p></a></li>
                     <li><a href=""><p>ACTIVIDADES</p></a></li>
-                    <li><a href=""><p>ALOJAMIENTO</p></a></li>
-                    <li><a href=""><p>QUIENES SOMOS</p></a></li>
                     <li><a href=""><p>SERVICIOS</p></a></li>
+                    <li><a href=""><p>QUIENES SOMOS</p></a></li>
+                    <li><a href=""><p>ALOJAMIENTO</p></a></li>
                 </ul>
             </nav>
         </div>
@@ -106,7 +106,7 @@
     <br>
     <hr>
     <br>
-    <h2 class="titulo_bienvenida">ALOJAMIENTO</h2>
+    <h2 class="titulo_bienvenida">SERVICIOS</h2>
     <br>
     <br>
     <br>
@@ -118,28 +118,29 @@
     <h2 class="titulo_bienvenida">QUIENES SOMOS</h2>
     <br>
     <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <hr>
-    <br>
-    <h2 class="titulo_bienvenida">SERVICIOS</h2>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <br>
-    <hr>
-    <br>
-    <div>
     <div>
         <div class="facebook"><i class="facebooki fab fa-facebook-f"></i><p>Facebook</p></div>
         <div class="instagram"><i class="instagrami fab fa-instagram"></i><p>Instagram</p></div>
         <div class="twitter"><i class="twitteri fab fa-twitter"></i><p>Twitter</p></div>
         <div class="youtube"><i class="youtubei fab fa-youtube"></i><p>Youtube</p></div>
     </div>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <h2 class="titulo_bienvenida">ALOJAMIENTO</h2>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
+    <hr>
+    <br>
+    <div>
+   
     <br>
     <br>
     <br>
