tabla en index y administrador mostrando vuelos de la tabla vuelos

--- a/admi/admin.html
+++ b/admi/admin.html
@@ -47,7 +47,7 @@
         <hr>
         <div class="modulos">
             <div class="modulo1"><button class="btn_modulo">Viajes</button></div>
-            <div class="modulo2"><button class="btn_modulo">Vuelos</button></div>
+            <div class="modulo2"><button class="btn_modulo"><a href="vuelos.php">Vuelos</a></button></div>
             <div class="modulo3"><button class="btn_modulo">Pasajeros</button></div>
         </div>
         <hr>
