insertar vuelos en la tabla desde administrador

--- a/admi/admin.html
+++ b/admi/admin.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="admin.css">
-    <title>Admin</title>
+    <title>ADMINISTRADOR</title>
 </head>
 <body>
     <div class="container">
@@ -46,7 +46,7 @@
         </div>
         <hr>
         <div class="modulos">
-            <div class="modulo1"><button class="btn_modulo">Viajes</button></div>
+            <div class="modulo1"><button class="btn_modulo"> <a href="crear_vuelos.html">CREAR vuelos</a></button></div>
             <div class="modulo2"><button class="btn_modulo"><a href="vuelos.php">Vuelos</a></button></div>
             <div class="modulo3"><button class="btn_modulo">Pasajeros</button></div>
         </div>
