--- a/Html/iniciosesion.html
+++ b/Html/iniciosesion.html
@@ -21,7 +21,7 @@
                 <input type="submit" name="enviar" id="env" value="Ingresar">
                 <div class="opc">
                     <a href="registro.html" class="registro"><i>Registrate ahora</i></a>
-                    <a href="../index.html" class="regreso"><i>Regresar</i></a>
+                    <a href="../index.php" class="regreso"><i>Regresar</i></a>
                 </div>
             </form>
         </div>
