--- a/Html/registro.html
+++ b/Html/registro.html
@@ -35,7 +35,7 @@
                 <input type="text" id="direc" name="dire" placeholder="Ingrese su cuidad local" required autocomplete="off">
                 </div>
                 </div>
-                <a href="../index.html" class="regreso"><i>Regresar</i></a>
+                <a href="../index.php" class="regreso"><i>Regresar</i></a>
                 <input type="submit" name="enviar" id="env" value="Registrar">
             </form>
         </div>
