tabla eliminar vuelos

--- a/admi/admin.html
+++ b/admi/admin.html
@@ -52,8 +52,8 @@
                 <ul class="menu">
                     <li><a href="vuelos.php">Vuelos</a>
                         <ul class="submenu">
-                            <li><a href="crear_vuelos.html">Crear vuelos</a></li>
-                            <li><a href="modificar_vuelos.php">Editar vuelo</a></li>
+                            <li><a href="crear_vuelos.html">Crear Vuelos</a></li>
+                            <li><a href="modificar_vuelos.php">Editar Vuelos</a></li>
                         </ul>
                     </li>
                 </ul>
