--- a/admi/admin.html
+++ b/admi/admin.html
@@ -50,9 +50,9 @@
             <div class="modulo1"><button class="btn_modulo"><a href="#">Clientes</a></button></div>
             <nav class="navegacion">
                 <ul class="menu">
-                    <li><a href="#">Vuelos</a>
+                    <li><a href="vuelos.php">Vuelos</a>
                         <ul class="submenu">
-                            <li><a href="#">Crear vuelo</a></li>
+                            <li><a href="crear_vuelos.html">Crear vuelo</a></li>
                         </ul>
                     </li>
                 </ul>
