--- a/cliente/index.html
+++ b/cliente/index.html
@@ -18,7 +18,7 @@
                 </ul>
             <div class="menu1">
                 <div class="admin">
-                    <h4>CLIENTES</h4>
+                    <h4>SECCION DE CLIENTES</h4>
                 </div>
             </div>      
         </div>
@@ -47,17 +47,7 @@
         </div>
         <hr>
         <div class="modulos">
-            <div class="modulo1"><button class="btn_modulo"><a href="#">Clientes</a></button></div>
-            <nav class="navegacion">
-                <ul class="menu">
-                    <li><a href="vuelos.php">Vuelos</a>
-                        <ul class="submenu">
-                            <li><a href="crear_vuelos.html">Crear Vuelos</a></li>
-                            <li><a href="modificar_vuelos.php">Editar Vuelos</a></li>
-                        </ul>
-                    </li>
-                </ul>
-            </nav>
+            <div class="modulo1"><button class="btn_modulo"><a href="#">COMPRAR TIQUETES</a></button></div>
         </div>
         <hr>
         <div class="footer">
