Versión nueva y sukulenta

--- a/Html/iniciosesion.html
+++ b/Html/iniciosesion.html
@@ -1,23 +1,31 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"> 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/estilos.css">
+    <link href="https://fonts.googleapis.com/css2?family=Saira+Condensed:wght@100&family=Shadows+Into+Light&display=swap" rel="stylesheet">
+    <link rel="icon" href="../imagenes/logo.ico">
     <title>Inicio</title>
-</head>
+</head> 
 <body>
     <div class="container">
+        <img src="../imagenes/logoage.png" alt="">
         <div class="formu">
             <form action="../php/inicio.php" method="POST" id="form">
+                <h1>INICIO DE SESION</h1>
                 <label for="user">Usuario</label>
                 <input type="text" id="usu" name="usu" placeholder="Ingrese su usuario" required autocomplete="off">
                 <label for="password">Password</label>
                 <input type="password" id="contra" name="contra" placeholder="Ingrese su contraseña" required autocomplete="off">
-                <input type="submit" name="enviar" id="env" value="Registrar">
-                <a href="registro.html" class="registro">Registrate ahora</a>
+                <input type="submit" name="enviar" id="env" value="Ingresar">
+                <div class="opc">
+                    <a href="registro.html" class="registro"><i>Registrate ahora</i></a>
+                    <a href="../index.php" class="regreso"><i>Regresar</i></a>
+                </div>
             </form>
         </div>
+        
     </div>
 </body>
 </html>
