--- a/admi/crear_vuelos.html
+++ b/admi/crear_vuelos.html
@@ -7,9 +7,11 @@
     <title>crear vuelos</title>
 </head>
 <body>
-    <h1>bienvenido administrador | crear vuelos</h1>
+    <div class="conte">
+        <div class="formu">
+            <img src="../imagenes/logoage.png" alt="">
     <form method="POST" action="../php/crear_vuelos.php">
-       
+        <h2> CREAR VUELOS</h2>
         <input type="text" placeholder="N° vuelo"name="nvuelos" autocomplete="off">
         <input type="text" placeholder="Hora programada"name="hora" autocomplete="off">
         <input type="text" placeholder="Lugar destino"name="ldestino" autocomplete="off">
@@ -17,8 +19,10 @@
         <input type="text" placeholder="Aeropuerto salida"name="asalida" autocomplete="off">
         <input type="text" placeholder="Aeropuerto destino"name="adestino" autocomplete="off">
         <input type="text" placeholder="Estado"name="estado" autocomplete="off">
-        <input type="submit">
+        <input class="enviar" type="submit">
     </form>
-    
+</div>
+    <h1> BIENVENIDO ADMINISTRADOR</h1>
+    </div>
 </body>
 </html>
