--- a/cliente/tiquetes.html
+++ b/cliente/tiquetes.html
@@ -3,12 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tiquetes</title>
+    <link rel="stylesheet" href="tiquetes.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <title>Comprar Tiquetes</title>
 </head>
 <body>
     <div class="for">
-        <form action="tiquete.php" method="POST">
-            
+        
+        <form action="tiquete.php" method="POST" name="tiquetesF">
+            <h1>¡COMPRA TUS TIQUETES!</h1>
+            <select name="" id="">
+                <option value="">Elija un Destino</option>
+                <option value="1">Alemania</option>
+                <option value="2">Australia</option>
+                <option value="3">Canada</option>
+                <option value="4">Marruecos</option>
+                <option value="5">Rusia</option>
+            </select>
+            <select name="" id="">
+                <option value="">Elija Una Clase</option>
+                <option value="1">Baja</option>
+                <option value="2">Media</option>
+                <option value="3">Alta</option>
+            </select>
+            <div class="pasajeross">
+                <label for="pasajeros">Numero de pasajeros</label>
+               <div class="incre">
+                <input type="button" value="-" onclick="tiquetesF.pasajeros.value--"> 
+                <input type="text" name="pasajeros" value="1" >
+                <input type="button" value="+" onclick="tiquetesF.pasajeros.value++">
+                </div>
+            </div>
+               <input class="siguiente" type="submit" value="Siguente">
         </form>
     </div>
 </body>
