--- a/admi/crear_vuelos.html
+++ b/admi/crear_vuelos.html
@@ -14,11 +14,19 @@
         <h2> CREAR VUELOS</h2>
         <input type="text" placeholder="N° vuelo"name="nvuelos" autocomplete="off">
         <input type="text" placeholder="Hora programada"name="hora" autocomplete="off">
-        <input type="text" placeholder="Lugar destino"name="ldestino" autocomplete="off">
+        <select name="pais" id="">
+            <option value="Alemania">Alemania</option>
+            <option value="Rusia">Rusia</option>
+            <option value="China">China</option>
+            <option value="España">España</option>
+
+        </select>
+        <!-- <input type="text" placeholder="Lugar destino"name="ldestino" autocomplete="off"> -->
         <input type="text" placeholder="Lugar salida"name="lsalida" autocomplete="off">
         <input type="text" placeholder="Aeropuerto salida"name="asalida" autocomplete="off">
         <input type="text" placeholder="Aeropuerto destino"name="adestino" autocomplete="off">
         <input type="text" placeholder="Estado"name="estado" autocomplete="off">
+        <input type="hidden" value="" name="fff">
         <input class="enviar" type="submit">
     </form>
 </div>
