prueba de la prueba de la prueba

--- a/info/tiquete.html
+++ b/info/tiquete.html
@@ -22,7 +22,7 @@
         <p>APELLIDO VIAJERO: </p>
         <p>FECHA Y HORA: </p>
         <hr>
-        <button id="pdf">Descargar</button>
+        <button id="pdf">Imprimir</button>
     </div>
 </body>
     <script>
