--- a/info/misviajes.html
+++ b/info/misviajes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>tiquete</title>
+    <title>Mis Viajes Info</title>
 </head>
 <body>
     <div class="certificado">
@@ -20,7 +20,7 @@
         <p>AEROPUERTO DESTINO: </p>
         <p>ESTADO: </p>
         <hr>
-        <button id="pdf">Descargar</button>
+        <button id="pdf">Imprimir</button>
     </div>
 </body>
     <script>
