--- a/info/tiquete.html
+++ b/info/tiquete.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="estilos.css">
-    <title>tiquete</title>
+    <title>Tiquete Info</title>
 </head>
 <body>
     <div class="certificado">
