correcion formulario usuario

--- a/Html/registro.html
+++ b/Html/registro.html
@@ -10,7 +10,7 @@
     <div class="container">
         <img src="../imagenes/logoage.png" alt="">
         
-        <div class="formu">
+        <div class="formu"> 
             <form action="../php/registro.php" method="POST" id="form">
                 <h1>REGISTRO DE USUARIO</h1>
                 <div class="conten">
@@ -21,7 +21,7 @@
                 <input type="text" id="nom" name="nom" placeholder="Ingrese su nombre completo" required autocomplete="off">
                 <label for="apellido">Apellido completo</label>
                 <input type="text" id="ape" name="ape" placeholder="Ingrese su apellido completo" required autocomplete="off">
-                <label for="direccion">Direccon</label>
+                <label for="direccion">Direccion</label>
                 <input type="text" id="direc" name="dire" placeholder="Ingrese su direccion" required autocomplete="off">
                 </div>
                 <div class="fila">
@@ -31,8 +31,8 @@
                 <input type="text" id="cel" name="celular" placeholder="Ingrese su Celular" required autocomplete="off">
                 <label for="password">Password</label>
                 <input type="password" id="contra" name="contra" placeholder="Ingrese su contraseña" required autocomplete="off">
-                <label for="direccion">Ciudad</label>
-                <input type="text" id="direc" name="dire" placeholder="Ingrese su cuidad local" required autocomplete="off">
+                <label for="direccion">Usuario</label>
+                <input type="text" id="direc" name="usu" placeholder="Ingrese su cuidad local" required autocomplete="off">
                 </div>
                 </div>
                 <a href="../index.php" class="regreso"><i>Regresar</i></a>
