subo cambios del ajax ese, ay ustedes saben

--- a/Html/registro.html
+++ b/Html/registro.html
@@ -32,7 +32,7 @@
                 <label for="password">Password</label>
                 <input type="password" id="contra" name="contra" placeholder="Ingrese su contraseña" required autocomplete="off">
                 <label for="direccion">Usuario</label>
-                <input type="text" id="direc" name="usu" placeholder="Ingrese su cuidad local" required autocomplete="off">
+                <input type="text" id="direc" name="usu" placeholder="Ingrese su nombre de usuario" required autocomplete="off">
                 </div>
                 </div>
                 <a href="../index.php" class="regreso"><i>Regresar</i></a>
